add hero image and center form content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,6 +146,25 @@ img {
     background-color: #ADFF2F;
 }
 
+/*Contact page styling */
+
+.hero {
+    width: 100%;
+    height: 100vh;
+    background: url('../images/hero-image.jpg');
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+form {
+    width: 90%;
+    max-width: 600px;
+}
+
+
 /* Footer styling*/
 
 footer {
