align header for smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,4 +239,14 @@ footer > p {
     #title {
         font-size: 150%;
     }
+    
+    .head-align {
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    
 }
+
