--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,55 +119,43 @@ img {
 }
 
 /*classes page styling */
-/* 
+
 .columns {
-    display: flex;
-    align-items: left;
+
     gap: 1rem;
-    border: 10px solid;
-    flex-direction: column;
+    border: 10px solid #252525;
+
 }
-*/
-#yoga {
+
+.card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 40%;
   border-radius: 5px;
 }
 
-#swimming {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 40%;
-    border-radius: 5px;
+.columns img {
+    border-radius: 5px 5px 0 0;
 }
 
-#soccer {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 40%;
-    border-radius: 5px;
+.container {
+    padding: 2px 16px;
 }
 
-#running {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 40%;
-    border-radius: 5px;
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+
+.flex-one {
+    display: flex;
+    justify-content: center;
+
 }
 
-#basketball {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 40%;
-    border-radius: 5px;
-} 
-
-#playdate {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 40%;
-  border-radius: 5px;
+.flex-two {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
 }
 
 /*Contact page styling */
