--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@ h1, h2 {
     width: 100%;
     overflow: hidden;
     position: relative;
-
+    
 }
 
 img {
@@ -140,6 +140,8 @@ img {
 
 .container {
     padding: 2px 16px;
+    font-size: 110%;
+    
 }
 
 .card:hover {
@@ -282,6 +284,26 @@ footer > p {
         right: 50px;
         width: 200PX;
         height: 200px;
+    }
+
+}
+
+@media screen and (max-width: 560px) {
+    .flex-one {
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+       
+    }
+
+    .flex-two {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .card {
+        width: 100%;
     }
 
 }
