align h2 classes center, add padding bottom to ul

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,6 +148,14 @@ img {
     
 }
 
+.container h2 {
+    text-align: center;
+}
+
+.container ul {
+    padding-bottom: 15px;
+}
+
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   }
